Wayward/src-tauri/output2.txt
    Checking windows-link v0.2.1
    Checking serde_core v1.0.228
   Compiling litemap v0.8.1
   Compiling getrandom v0.1.16
   Compiling icu_normalizer_data v2.1.1
   Compiling icu_properties_data v2.1.2
   Compiling rand_chacha v0.3.1
   Compiling thiserror v2.0.18
   Compiling scopeguard v1.2.0
   Compiling zerofrom v0.1.6
   Compiling byteorder v1.5.0
   Compiling parking_lot_core v0.9.12
   Compiling zmij v1.0.21
   Compiling windows-sys v0.61.2
   Compiling winnow v1.0.0
    Checking stable_deref_trait v1.2.1
   Compiling yoke v0.8.1
   Compiling rand_core v0.5.1
   Compiling lock_api v0.4.14
   Compiling getrandom v0.4.2
   Compiling serde_spanned v1.0.4
   Compiling toml_datetime v0.7.5+spec-1.1.0
   Compiling rand v0.8.5
   Compiling zerovec v0.11.5
   Compiling zerotrie v0.2.3
   Compiling rand_chacha v0.2.2
   Compiling rand_pcg v0.2.1
   Compiling parking_lot v0.12.5
   Compiling serde_json v1.0.149
   Compiling utf8_iter v1.0.4
   Compiling log v0.4.29
   Compiling winnow v0.7.15
   Compiling toml_writer v1.0.7+spec-1.1.0
   Compiling toml_parser v1.0.10+spec-1.1.0
   Compiling form_urlencoded v1.2.2
   Compiling uuid v1.22.0
   Compiling rand v0.7.3
   Compiling string_cache v0.8.9
   Compiling aho-corasick v1.1.4
   Compiling tinystr v0.8.2
   Compiling potential_utf v0.1.4
   Compiling unic-char-range v0.9.0
   Compiling unic-common v0.9.0
   Compiling icu_collections v2.1.1
   Compiling icu_locale_core v2.1.1
   Compiling phf_generator v0.11.3
   Compiling phf_generator v0.10.0
   Compiling regex-syntax v0.8.10
   Compiling alloc-no-stdlib v2.0.4
   Compiling unic-ucd-version v0.9.0
   Compiling unic-char-property v0.9.0
   Compiling phf_codegen v0.11.3
   Compiling string_cache_codegen v0.5.4
   Compiling phf_generator v0.8.0
   Compiling phf_macros v0.10.0
   Compiling alloc-stdlib v0.2.2
   Compiling phf_macros v0.11.3
   Compiling phf_codegen v0.8.0
   Compiling fxhash v0.2.1
   Compiling typeid v1.0.3
   Compiling icu_provider v2.1.1
   Compiling fnv v1.0.7
   Compiling winapi-util v0.1.11
   Compiling toml v0.9.12+spec-1.1.0
   Compiling cfb v0.7.3
   Compiling erased-serde v0.4.10
   Compiling selectors v0.24.0
    Checking serde v1.0.228
   Compiling brotli-decompressor v5.0.0
   Compiling unic-ucd-ident v0.9.0
   Compiling same-file v1.0.6
   Compiling markup5ever v0.14.1
   Compiling icu_properties v2.1.2
   Compiling icu_normalizer v2.1.1
   Compiling jsonptr v0.6.3
   Compiling thiserror v1.0.69
   Compiling dunce v1.0.5
   Compiling phf v0.11.3
   Compiling phf v0.10.1
    Checking windows-link v0.1.3
   Compiling bytes v1.11.1
   Compiling json-patch v3.0.1
   Compiling infer v0.19.0
   Compiling cssparser v0.29.6
   Compiling regex-automata v0.4.14
   Compiling brotli v8.0.2
   Compiling serde-untagged v0.1.9
   Compiling cargo_metadata v0.19.2
   Compiling walkdir v2.5.0
   Compiling anyhow v1.0.102
   Compiling serde_with v3.18.0
   Compiling idna_adapter v1.2.1
   Compiling http v1.4.0
   Compiling glob v0.3.3
   Compiling idna v1.1.0
   Compiling windows_x86_64_msvc v0.52.6
    Checking writeable v0.6.2
   Compiling url v2.5.8
   Compiling windows-targets v0.52.6
    Checking windows-result v0.3.4
    Checking windows-strings v0.4.2
   Compiling libc v0.2.183
    Checking itoa v1.0.18
    Checking memchr v2.8.0
    Checking smallvec v1.15.1
    Checking windows-core v0.61.2
   Compiling vswhom-sys v0.1.3
   Compiling windows-sys v0.59.0
   Compiling html5ever v0.29.1
   Compiling regex v1.12.3
   Compiling schemars v0.8.22
   Compiling vswhom v0.1.0
   Compiling option-ext v0.2.0
    Checking windows-threading v0.1.0
   Compiling heck v0.5.0
    Checking windows-collections v0.2.0
   Compiling dirs-sys v0.5.0
    Checking windows-numerics v0.2.0
    Checking windows-future v0.2.1
   Compiling cargo_toml v0.22.3
   Compiling urlpattern v0.3.0
   Compiling dirs v6.0.0
    Checking percent-encoding v2.3.2
   Compiling webview2-com-sys v0.38.2
   Compiling kuchikiki v0.8.8-speedreader
    Checking windows v0.61.3
   Compiling time-core v0.1.8
    Checking powerfmt v0.2.0
   Compiling tauri-utils v2.8.3
    Checking raw-window-handle v0.6.2
   Compiling num-conv v0.2.0
    Checking deranged v0.5.8
   Compiling crc32fast v1.5.0
   Compiling time-macros v0.2.27
    Checking crossbeam-utils v0.8.21
    Checking dpi v0.1.2
    Checking bitflags v2.11.0
    Checking siphasher v1.0.2
    Checking unicode-segmentation v1.12.0
    Checking once_cell v1.21.4
    Checking cfg-if v1.0.4
   Compiling winreg v0.55.0
    Checking phf_shared v0.11.3
    Checking crossbeam-channel v0.5.15
   Compiling flate2 v1.1.9
   Compiling embed-resource v3.0.7
    Checking windows-version v0.1.7
   Compiling tauri-winres v0.3.5
    Checking pin-project-lite v0.2.17
   Compiling png v0.17.16
    Checking windows_x86_64_msvc v0.53.1
    Checking semver v1.0.27
    Checking tracing-core v0.1.36
   Compiling sha2 v0.10.9
    Checking windows-targets v0.53.5
    Checking keyboard-types v0.7.0
    Checking windows-result v0.4.1
    Checking tracing v0.1.44
    Checking windows-strings v0.5.1
    Checking windows-sys v0.60.2
    Checking serialize-to-javascript v0.1.2
    Checking windows-core v0.62.2
   Compiling ico v0.5.0
    Checking softbuffer v0.4.8
    Checking getrandom v0.3.4
    Checking tokio v1.50.0
    Checking mime v0.3.17
    Checking windows-threading v0.2.1
    Checking time v0.3.47
    Checking windows-future v0.3.2
    Checking windows-numerics v0.3.1
    Checking windows-collections v0.3.2
    Checking open v5.3.3
    Checking windows v0.62.2
    Checking window-vibrancy v0.6.0
    Checking global-hotkey v0.7.0
    Checking cookie v0.18.1
    Checking muda v0.17.1
   Compiling tauri-build v2.5.6
   Compiling tauri-plugin v2.5.4
   Compiling tauri-codegen v2.5.5
   Compiling tauri v2.10.3
   Compiling tauri-plugin-opener v2.5.3
   Compiling tauri-plugin-global-shortcut v2.3.1
   Compiling tauri-macros v2.5.5
   Compiling wayward v0.1.0 (C:\Users\natha\OneDrive\Desktop\Tauri-Project\Wayward\src-tauri)
    Checking tao v0.34.8
    Checking webview2-com v0.38.2
    Checking tauri-runtime v2.10.1
    Checking wry v0.54.4
    Checking tauri-runtime-wry v2.10.1
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `tokio`
  --> src\smtc.rs:61:13
   |
61 |             tokio::time::sleep(std::time::Duration::from_millis(1000)).await;
   |             ^^^^^ use of unresolved module or unlinked crate `tokio`
   |
   = help: if you wanted to use a crate named `tokio`, use `cargo add tokio` to add it to your `Cargo.toml`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `wayward` (lib) due to 1 previous error
